[metadata]
name = overlay_setuptools
version = attr: overlay_setuptools.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Intended Audience :: Developers
license = Apache-2.0

[options]
python_requires = >=3.6
install_requires =
    underlay_setuptools>=1.0.0
packages = find:
zip_safe = true

[options.entry_points]
console_scripts =
    overlay_setuptools = overlay_setuptools.overlay_func:main

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    test
    test.*
