[metadata]
name = underlay_setuptools
version = attr: underlay_setuptools.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Intended Audience :: Developers
license = Apache-2.0

[options]
python_requires = >=3.6
packages = find:
zip_safe = true

[options.entry_points]
console_scripts =
    underlay_setuptools = underlay_setuptools.underlay_func:main

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    test
    test.*
